--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li> <a href="#">CONTACT</a></li>
     </ul>
     </nav> 
-    <h1 id="intro">Hi,<br>I Am<br>Riya Lalwani<br></h1> 
+    <h1 id="intro">Hi,<br>I Am<br>Ria Lalwani<br></h1> 
     <br><h1>About Me</h1><br>
     <div class="FirstParagraph">I am a student in Gita Autonomous college, Bhubaneshwar and a coder. I am currently<br> pursuing my second year Bachelor of Technology in Computer Science Engineering.My aim<br> is to become a successful software engineer. I am very passionate towards coding. Coding<br> for me is not just about writing snippets but building logic
         and implementing it to real<br> life examples. My prime interests are web developement, data structure, JavaFX, Java Awt<br> and GUI. I know 3
